# MineCraft

./: .gitignore  CMakeLists.txt  CMakeSettings.json  LICENSE  Model.h  OpenGL.sln  OpenGL.vcxproj  OpenGL.vcxproj.filters  README.md
Included/: Mesh.h  Model.h  ModelLoading.h  basemodel.h
Included/entity/: Camera.h
Included/renderer/: CubeRenderer.h  QuadRenderer.h  Render.h  baserender.h  chunkrenderer.h  modelsrender.h
Included/shader/: BasicShader.h
Included/ultils/: matrix.h
Included/world/block/: BlockContribute.h  BlockDatabase.h  BlockFactory.h  blockmodel.h
Included/world/chunk/: Chunk.h  chunkmesh.h  chunkmeshbuilder.h  chunkmodel.h  chunkmodelbuilder.h
Included/world/quad/: quadmodel.h
OpenGL/: CMakeLists.txt  OpenGL.cpp  OpenGL.h
Resource/shaders/: Cube.frag  Default.frag  Default.vert
Source/: Application.cpp  Application.h  Context.cpp  Context.h  Engine.cpp  Engine.h  EventManager.h  Event_Queue.h  KeyBoard.cpp  KeyBoard.h  Mesh.cpp  Mesh.h  MineCraft.cpp  Model.cpp  ModelLoading.h  NonCopyable.h  Singleton.h  basemodel.cpp  counted_ptr.h  glm.h
Source/Entity/: BasicCube.h  Camera.cpp  Camera.h  Cube.cpp  Cube.h  CubeModel.cpp  CubeModel.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  ModelLoading.h
Source/Renderer/: CubeRenderer.cpp  CubeRenderer.h  QuadRenderer.cpp  QuadRenderer.h  Render.cpp  Render.h  baserenderer.cpp
Source/Shader/: BasicShader.cpp  BasicShader.h  Shader.h  ShaderLoader.h
Source/Texture/: CubeTexture.cpp  CubeTexture.h  QuadTexture.cpp  QuadTexture.h  Texture.cpp  Texture.h
Source/Utils/: Matrix.cpp  ShaderLoader.cpp
Source/Utils/Patterns/: NonCopyable.h  NonMovable.h
Source/World/: WorldContant.h
Source/World/Block/: BlockContribute.h  BlockDatabase.cpp  BlockDatabase.h  BlockFactory.cpp  BlockFactory.h  BlockId.h
Source/World/Chunk/: Chunk.cpp  Chunk.h
Source/World/quad/: quadmodel.cpp
Source/renderer/: chunkrenderer.cpp  modelsrender.cpp
Source/smart_ptr/: autocreate_ptr.h  counted_ptr.h
Source/world/block/: airblock.cpp  blockmodel.cpp  dirtblock.cpp  grassblock.cpp  stoneblock.cpp
Source/world/chunk/: chunkmesh.cpp  chunkmeshbuilder.cpp  chunkmodel.cpp  chunkmodelbuilder.cpp
include/: basemodel.h  context.h  eventmanager.h
include/renderer/: baserender.h  modelsrender.h
include/shader/: shader.h
include/texture/: cubetexture.h
include/ultils/: matrix.h
include/world/: noicegenerator.h  world.h  worldcontant.h
include/world/block/: blockcontribute.h  blockdatabase.h  blockfactory.h
include/world/chunk/: chunk.h  chunkmodelbuilder.h
include/world/quad/: quadmodel.h
res/shaders/: Chunk.frag  Cube.frag  Cube.vert  Default.frag  Default.vert  Quad.frag
src/: basemodel.cpp  context.cpp  engine.cpp  engine.h
src/renderer/: modelsrender.cpp
src/texture/: cubetexture.cpp  quadtexture.cpp
src/utils/: Matrix.cpp  shaderloader.cpp
src/utils/patterns/: observerpattern.h  singleton.h
src/world/: noicegenrator.cpp  world.cpp
src/world/block/: BlockDatabase.cpp  BlockFactory.cpp  airblock.cpp  blockmodel.cpp  dirtblock.cpp  grassblock.cpp  stoneblock.cpp  waterblock.cpp
src/world/chunk/: chunk.cpp  chunkmodel.cpp  chunkmodelbuilder.cpp
